# python-project-50

./: Makefile  README.md  gendiff.py  pyproject.toml  sonar-project.properties
.github/workflows/: my_workflow.yml  pyci.yml
gendiff/formatters/: format_identifier.py  plain.py  stylish.py
gendiff/scripts/: find_diff.py  gendiff.py  generate_diff.py  parser.py
scripts/: gendiff_script.py
scripts/tests/: test_generate.py
tests/: test_generate.py
tests/fixtures/: expected_json_format.txt
